# commons-anchor

./: .env.example  .gitignore  .gitmessage  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md  copilot-progress-reminder.md
.github/workflows/: mermaid-validate.yml  platform-smoke.yml  python-quality.yml
docs/: ARCHITECTURE_REFACTORING.md  glossary.md  lessons-learned.md  toolchain.md
docs/architecture/: adr-0001-platform-scope.md  api-timeseries-ingest-template-guide.md  data-warehouse-strategy.md  diagram-model.json  mermaid-guidelines.md  mermaid-templates.md  semantic-model-power-price.md  sql-delivery-playbook.md
docs/infra/: android-mqtt-smoke-test.md  environment-validation.md  remote-access.md  ubuntu-lenovo-tiny.md
docs/iot/: esp-idf-toolchain.md
docs/roadmap/: backlog.md
docs/security/: local-secrets-baseline.md  wireguard-client-laptop-prep.md  wireguard-cx23-day1-runbook.md  wireguard-h1-prehardware-checklist.md  wireguard-remote-access.md
docs/testing/: lenovo-tiny-readiness-checklist.md  runtime-test-structure.md
firmware/: README.md
firmware/hello_c6/: CMakeLists.txt  README.md
infra/docker/: ingest.Dockerfile
infra/sql/: 001_bootstrap.sql  020_refresh_all.sql
infra/sql/init/: 001_init.sql
infra/wireguard/: README.md  client.conf.example  generatekeys-keys.md  wg0.conf.example
scripts/: check_mermaid_compile.py  check_sql_syntax.py  energidataservice_ingest.py  generate_mermaid_from_model.py  local_quality_gate.py  mqtt_ingest.py  refresh_serving.py  run_refresh_all.ps1
scripts/ingest/: api_timeseries_ingest_template.py  dmi_climate_ingest.py  energidataservice_ingest.py  mqtt_ingest.py  refresh_curated.py  run_pipeline.ps1  run_pipeline.sh
tests/: README.md  test_energidataservice_ingest.py  test_mqtt_ingest.py
(+58 files in other folders)
