[project]
name = "commons-anchor"
version = "0.1.0"
description = "Self-hosted data platform for applied learning and technical demonstration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
	"ruff>=0.11,<0.12",
	"pytest>=8.0,<9.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
typeCheckingMode = "standard"
include = ["scripts"]
venvPath = "."
venv = ".venv"

