[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["scripts*"]

[project]
name = "commons-anchor"
version = "0.1.0"
description = "Self-hosted data platform for applied learning and technical demonstration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"psycopg[binary]>=3.2,<3.3",
	"paho-mqtt>=2.1,<3.0",
	"requests>=2.32,<3.0",
]

[project.scripts]
energidata-ingest = "scripts.energidataservice_ingest:main"
mqtt-ingest = "scripts.mqtt_ingest:main"
check-sql-syntax = "scripts.check_sql_syntax:main"
local-quality-gate = "scripts.local_quality_gate:main"
check-mermaid-compile = "scripts.check_mermaid_compile:main"

[project.optional-dependencies]
dev = [
	"ruff>=0.11,<0.12",
	"pytest>=8.0,<9.0",
	"pyright>=1.1,<2.0",
	"pglast>=7.7,<8.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
typeCheckingMode = "standard"
include = ["scripts", "tests"]

